fix sidebar z-index and top padding

--- a/src/theme/css/term.css
+++ b/src/theme/css/term.css
@@ -142,8 +142,9 @@ li ol > li:before {
 }
 
 #sidebar {
-    z-index: 1001;
+    z-index: 999;
     margin-top: var(--header-height);
+    padding-top: 10px;
 }
 
 h1 {
@@ -161,7 +162,7 @@ h1 {
     font-size: 32px;
     width: 32px;
     height: 32px;
-    z-index: 1002;
+    z-index: 1001;
 }
 
 #nav-btn i {
